# cargo-unlock

./: Cargo.toml  README.md
.github/workflows/: ci.yml  install.yml
src/: main.rs
