[package]
name = "cargo-unlock"
version = "1.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Remove Cargo.lock lockfile"
repository = "https://github.com/dtolnay/cargo-unlock"
documentation = "https://github.com/dtolnay/cargo-unlock"
keywords = ["cargo", "subcommand"]
categories = ["development-tools::cargo-plugins"]
edition = "2021"
rust-version = "1.58"
readme = "README.md"

[dependencies]
anyhow = "1.0"
cargo-subcommand-metadata = "0.1"
clap = { version = "3.2.5", features = ["deprecated", "derive", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
