[package]
name = "cargo-unlock"
version = "1.0.4"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Remove Cargo.lock lockfile"
documentation = "https://github.com/dtolnay/cargo-unlock"
edition = "2021"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-unlock"
rust-version = "1.58"

[dependencies]
anyhow = "1.0"
cargo-subcommand-metadata = "0.1"
clap = { version = "4.0", features = ["deprecated", "derive", "wrap_help"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
