[package]
name = "cargo-unlock"
version = "1.0.12"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["development-tools::cargo-plugins"]
description = "Remove Cargo.lock lockfile"
documentation = "https://github.com/dtolnay/cargo-unlock"
edition = "2021"
keywords = ["cargo", "subcommand"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/cargo-unlock"
rust-version = "1.70"

[dependencies]
anyhow = "1.0.79"
cargo-subcommand-metadata = "0.1"
clap = { version = "4.0", features = ["deprecated", "derive", "wrap_help"] }
clap-cargo = "0.18"
serde = "1.0.194"
serde_derive = "1.0.194"
serde_json = "1.0.110"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
